[package]
name = "rational"
description = "Minimalistic library for rational numbers"
version = "1.6.0"
authors = ["Isak Jägberg <ijagberg@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["rational", "ratio", "fraction", "fractions"]
categories = ["mathematics", "science"]
repository = "https://github.com/ijagberg/rational"
homepage = "https://github.com/ijagberg/rational"

[dependencies]
num-traits = { version = "0.2.16", optional = true }

[features]
num-traits = ["dep:num-traits"]

[dev-dependencies]
num-rational = "0.4.2"
rand = "0.8.3"
