[package]
name = "rational"
description = "Minimalistic library for rational numbers"
version = "1.8.0"
authors = ["Isak Jägberg <ijagberg@protonmail.com>"]
edition = "2021"
license = "MIT"
keywords = ["rational", "ratio", "fraction", "fractions"]
categories = ["mathematics", "science"]
repository = "https://github.com/ijagberg/rational"
homepage = "https://github.com/ijagberg/rational"

[dependencies]
num-traits = { version = "0.2.16", optional = true }
serde = { version = "1.0.186", optional = true }

[features]
num-traits = ["dep:num-traits"]
serde = ["dep:serde"]

[dev-dependencies]
num-rational = "0.4.2"
rand = "0.8.3"
serde_json = { version = "1.0.136", features = ["arbitrary_precision"] }
